services/LoadBalancer-traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-loadbalancer
spec:
  selector:
    app: traefik
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  type: LoadBalancer
