services/blog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-blog-service
spec:
  selector:
    app: ghost-blog
  ports:
  - name: http
    port: 2368
    targetPort: 2368
  type: ClusterIP
