services/ghost-blog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-blog-service
  namespace: blog
spec:
  selector:
    app: ghost-blog
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
