services/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: blog
  labels:
    app: ghost
spec:
  selector:
    app: ghost-blog
    tier: mysql
  clusterIP: None
  ports:
  -    port: 3306
