services/nginx-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
  namespace: blog
spec:
  selector:
    app: nginx-proxy
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
