services/traefik-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-proxy-service
  namespace: blog
spec:
  selector:
    app: traefik-proxy
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  type: ClusterIP
