services/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ingress
  namespace: blog
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: blog.gregattempts.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ghost-blog
            port:
              number: 80
  - host: blog.gregattempts.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ghost-blog
            port:
              number: 80
